--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "NODE_ENV=production node dist/index.js"
+    "start": "NODE_ENV=production node dist/index.js",
+    "test": "jest",
+    "loadtest": "loadtest -c 10 -n 10000 http://localhost:3000/transactions"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
+    "jest": "^29.5.0",
+    "loadtest": "^5.2.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "mariadb": "^3.1.1"
   }
 }
